Add edit form to general info section

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -141,6 +141,11 @@ button {
                 margin-right: 0.5em;
             }
         }
+
+        #general-info-edit-btn-container {
+            align-self: end;
+            justify-self: center;
+        }
     }
 }
 
